<resources>
    <string name="is_supported_screen">false</string>
    <string name="device_not_supported">Diese Applikation wurde für die Benutzung auf Tablets optimiert.</string>
    <string name="app_name">Drugstore</string>
    <string name="dialog_add_todo">Add Todo</string>
    <string name="dispense">Ausgeben</string>
    <string name="cancel">Abbrechen</string>
    <string name="create">Erfassen</string>
    <string name="create_drug">Medikament erfassen</string>
    <string name="add">Bestand hinzufügen</string>
    <string name="add_drug">Bestand hinzufügen</string>
    <string name="remove">Bestand entfernen</string>
    <string name="remove_drug">Bestand entfernen</string>
    <string name="edit">Medikament bearbeiten</string>
    <string name="edit_drug">Medikament bearbeiten</string>
    <string name="delete">Medikament löschen</string>
    <string name="delete_drug">%s löschen?</string>
    <string name="menu_management">Verwaltung</string>
    <string name="menu_dispensary">Abgabe</string>
    <string name="drugs">Medikamente</string>
    <string name="inventory">Inventar</string>
    <string name="signatures">Signaturen</string>
    <string name="history">Abgaben</string>
    <string name="search_title">Suche</string>
    <string name="search_hint">Medikament suchen</string>
    <string name="sign">Signieren</string>
    <string name="employee">Fachkraft</string>
    <string name="patient">Patient</string>
    <string name="amount">Anzahl</string>
    <string name="deviation">Abweichender Bestand</string>
    <string name="name">Name</string>
    <string name="category">Kategorie</string>
    <string name="dispense_unit">Ausgabe-Einheit</string>
    <string name="tolerance">Toleranz</string>
    <string name="tolerance_double">%.2f</string>
    <string name="save">Speichern</string>
    <string name="content">Inhalt</string>
    <string name="count">Anzahl</string>
    <string name="unit">Einheit</string>
    <string name="favorite">Favorite</string>
    <string name="injection">Injektion</string>
    <string name="oral">Oral</string>
    <string name="oral_liquig">Oral flüssig</string>
    <string name="plaster">Pflaster</string>
    <string name="no_items">Keine Einträge</string>
    <string name="marked_as_favorite">Als Favorit setzen</string>
    <string name="added_to_favorites">Zu Favoriten hinzugefügt</string>
    <string name="removed_from_favorites">Von Favoriten entfernt</string>
    <string name="not_enough_stock_amount">Zu wenig an Lager</string>
    <string name="dosage">Dosierung</string>
    <string name="error_dispense_drug">Beim Ausgeben trat ein Fehler auf</string>
    <string name="close">Schliessen</string>
    <string name="error_name_required">Bitte Name eingeben</string>
    <string name="error_dosage_required">Bitte Dosierung eingeben</string>
    <string name="error_drugtype_required">Bitte Kategorie auswählen</string>
    <string name="error_dispenseunit_required">Bitte Ausgabe-Einheit auswählen</string>
    <string name="error_employee_required">Bitte Fachkraft eingeben</string>
    <string name="error_patient_required">Bitte Patient eingeben</string>
    <string name="error_amount_required">Bitte Anzahl eingeben</string>
    <string name="error_amount_over_zero_required">Bitte Anzahl grösser als 0 eingeben</string>
    <string name="error_create_drug">Beim Erstellen trat ein Fehler auf</string>
    <string name="drug_not_found">Medikament wurde nicht gefunden</string>
    <string name="error_update_drug_amount">Fehler beim aktualisieren des Bestandes</string>
    <string name="remaining">Noch</string>
    <string name="created_at">Created at</string>
    <string name="signature_id">Signature Id</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="back">Zurück</string>
    <string name="share">Teilen</string>
    <string name="export">Export</string>
    <string name="backup">Backup</string>
    <string name="settings">Einstellungen</string>
    <string name="from_to">Von %1$s an %2$s</string>
    <string name="drug_stock_unit">Bestand: %1$.2f %2$s</string>
    <string name="drug_count">%d Medikamente</string>
    <string name="drug_tolerance">Toleranz: %.2f</string>
    <string name="drug_title_and_dosage">%1$s (%2$s)</string>
    <string name="drug_amount_and_unit">%1$.2f %2$s</string>
    <string name="actual_vs_expected_units">%1$.2f / %2$.2f %3$s</string>
    <string name="stock">Aktueller Bestand</string>
    <string name="add_to_stock">Zu Bestand hinzufügen</string>
    <string name="remove_from_stock">Von Bestand entfernen</string>
    <string name="substance">Substanz</string>
    <string name="error_substance_required">Bitte Substanz eingeben</string>
    <string name="error_toggle_favorite">Fehler beim Favorit setzen</string>
    <string name="signature_success">Erfolgreich signiert</string>
    <string name="checkall">Check all</string>
    <string name="import_title">IMPORT</string>
    <string name="export_title">EXPORT</string>
    <string name="error_update_drug">Fehler beim Aktualisieren</string>
    <string name="backup_title">BACKUP</string>
    <string name="drug_prevente_delete">Medikament bereits in Transaktion - Löschen verhindert</string>
    <string name="error_delete_drug">Fehler beim Löschen</string>
    <string name="drugtypes_title">Kategorien</string>
    <string name="units_title">Einheiten</string>
    <string name="new_drug_type">Neue Kategorie</string>
    <string name="new_unit">Neue Einheit</string>
    <string name="error_delete_drug_type">Fehler beim Löschen der Kategorie</string>
    <string name="error_delete_unit">Fehler beim Löschen der Einheit</string>
    <string name="successfully_created">Erfolgreich erstellt</string>
    <string name="create_new_unit">Eine neue Einheit erstellen</string>
    <string name="create_new_drug_type">Eine neue Kategorie erstellen</string>
    <string name="confirm_delete_drug_type">Löschen der Kategorie bestätigen</string>
    <string name="confirm_delete_unit">Löschen der Einheit bestätigen</string>
    <string name="confirm_delete_detail">Wollen Sie %s wirklich löschen</string>
    <string name="todo">TODO löschen</string>
    <string name="confirm">Bestätigen</string>
</resources>
