<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toolbar_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_toggle_check_all"
        android:icon="@drawable/ic_checkbox"
        android:title="@string/checkall"
        android:visible="false"
        app:actionViewClass="android.widget.CheckBox"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_back"
        android:icon="@drawable/ic_baseline_arrow_back_24"
        android:title="@string/back"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>